fix bugs in API
